@@ -54,6 +54,7 @@ abstract class IsotopeShipping extends Frontend
 	 */
 	protected $Isotope;
 	
+	protected $Order;
 	
 	/**
 	 * Initialize the object
@@ -64,6 +65,7 @@ abstract class IsotopeShipping extends Frontend
 	public function __construct($arrRow)
 	{
 		parent::__construct();
+		
 		
 		$this->import('Isotope');
 		
